[gd_scene load_steps=5 format=3 uid="uid://8egvl15et33p"]

[ext_resource type="Script" uid="uid://bk8i0djv8bbng" path="res://turret.gd" id="1_c5apd"]
[ext_resource type="Texture2D" uid="uid://ury3npo6t7n5" path="res://sprites/Turret/turret_BASE.png" id="1_tjdg3"]
[ext_resource type="Texture2D" uid="uid://dohorpg1l0drq" path="res://sprites/Turret/turret_FACE.png" id="2_c5apd"]
[ext_resource type="PackedScene" uid="uid://c85647en5c284" path="res://Bullet.tscn" id="4_coqkk"]

[node name="Turret" type="Node2D"]
script = ExtResource("1_c5apd")
BULLET = ExtResource("4_coqkk")

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_tjdg3")

[node name="GunSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_c5apd")
vframes = 10

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(528, 0)

[node name="ReloadTimer" type="Timer" parent="RayCast2D"]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="RayCast2D/ReloadTimer" to="." method="_on_reload_timer_timeout"]
